--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -8,6 +8,17 @@ one:
 
 two:
   title: MyString
-  description: MyText
+  description: \
+    MyText
   image_url: MyString
   price: 9.99
+
+ruby:
+  title: "Programming Ruby 1.9"
+  description:
+    Ruby is the fastest and most exciting dynamic
+    language out there.  If you need to get working programs
+    delivered fast, you should add Ruby to your toolbox.
+  price: 49.50
+  image_url: ruby.png
+  
